--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="container">
                     <div class="item">
                         <div class="bg-blue-transparent logo-fa"><span><i class="fas fa-2x fa-atom"></i></span> aMazeKing</div>
-                        <div class="bg-blue-transparent simple"><p>Custom hand-drawn mazes, made to order!</p></div>
+                        <div class="bg-blue-transparent simple"><p>Custom hand-drawn mazes made to order</p></div>
                     </div>
                 </div>
             </div>
