reorg + touch up + journal

--- a/journal.html
+++ b/journal.html
@@ -3,18 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Journal</title>
+    <title>aMazeKing - Journal</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <a href="index.html" class="back-button">&lt;</a>
         <div class="header-group">
-            <img src="pencil.gif" alt="" class="desktop-icon di0">
-            <h1>Journal entries </h1>
+            <img src="img/pencil.gif" alt="" class="desktop-icon di0">
+            <h1>Journal Entries </h1>
         </div>
     </header>
     <main>
+        <div class="journal-content">
+            <p>
+                <a href="journals/journal_2/second_entry.html" class="journal-entry">The most recenet journal entry</a>
+                <br />
+                <span class="caption">(March 14 2024)</span>
+            </p>
+            <p>
+                <a href="journals/journal_1/first_entry.html" class="journal-entry">The first journal entry</a>
+                <br />
+                <span class="caption">(March 13 2024)</span>
+            </p>
+        </div>
     </main>
 </body>
 </html>
