--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>aMazeKing - About</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <a href="index.html" class="back-button">&lt;</a>
         <div class="header-group">
-          <img src="mailbox.gif" alt="" class="desktop-icon di3">
+          <img src="img/mailbox.gif" alt="" class="desktop-icon di3">
           <h1>Info about us</h1>
         </div>
     </header>
