--- a/vhiqosad.html
+++ b/vhiqosad.html
@@ -3,18 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>???</title>
+    <title>aMazeKing - ???</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <a href="index.html" class="back-button">&lt;</a>
         <div class="header-group">
-            <img src="crystalball.gif" alt="" class="desktop-icon di4">
-            <h1>???</h1>
+            <img src="img/crystalball.gif" alt="" class="desktop-icon di4">
+            <h1>𒁃</h1>
         </div>
     </header>
     <main>
+        <div class="journal-content">
+            <h4>𒉹𒉺</h4>
+            <p>
+                ▬▬▬▬▬▬▬▬▬❂✦☮✦❂▬▬▬▬▬▬▬▬▬
+                <br />
+                ▬▬▬▬▬▬▬▬▬❃๑இ๑❃▬▬▬▬▬▬▬▬▬
+            </p>
+            <h4>𒂞</h4>
+            <p>
+                ▬▬▬▬▬▬▬▬▬☫✾௹✾☫▬▬▬▬▬▬▬▬▬
+                <br />
+                ▬▬▬▬▬▬▬▬▬☽⚯∰⚯☾▬▬▬▬▬▬▬▬▬
+            </p>
+            <h4>𒍬</h4>
+            <p>
+                ▬▬▬▬▬▬▬▬▬ꘑ✧ↂ✧ꘑ▬▬▬▬▬▬▬▬▬
+                <br />
+                ▬▬▬▬▬▬▬▬▬⛻❇ஜ❇⛻▬▬▬▬▬▬▬▬▬
+            </p>
+            <h4>𒋦</h4>
+            <p>
+                ▬▬▬▬▬▬▬▬▬🕆❃𒈔❃🕆▬▬▬▬▬▬▬▬▬
+                <br />
+                ▬▬▬▬▬▬▬▬▬✯⚶👁⚶✯▬▬▬▬▬▬▬▬▬ 
+            </p>
+        </div>
     </main>
 </body>
 </html>
