--- a/journals/journal_1/first_entry.html
+++ b/journals/journal_1/first_entry.html
@@ -10,7 +10,7 @@
     <header>
         <a href="../../journal.html" class="back-button">&lt;</a>
         <div class="header-group">
-            <img src="pencil.gif" alt="" class="desktop-icon di0">
+            <img src="../../img/pencil.gif" alt="" class="desktop-icon di0">
             <h1>The first journal entry</h1>
         </div>
     </header>
