--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
         <a href="index.html" class="back-button">&lt;</a>
         <div class="header-group">
           <img src="img/look.gif" alt="" class="desktop-icon di1">
-          <h1>Here is some demo and free stuff</h1>
+          <h1>Gallery</h1>
         </div>
     </header>
     <main>
