--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <a href="index.html" class="back-button">&lt;</a>
         <div class="header-group">
           <img src="img/mailbox.gif" alt="" class="desktop-icon di3">
-          <h1>Info about us</h1>
+          <h1>Info About Us</h1>
         </div>
     </header>
     <main>
