--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
     </header>
     <main>
       <div class="gallery">
-        <h3>Full size images will be available as prints in the shop. Each maze is keyed with a path to the exit with ink only visible under a blacklight.</h3>
+        <h3>Full size images will be available as prints in the shop</h3>
         <div class="gcontainer">
           <img src="img/Black Gives Way to Red.jpeg" alt="Black Gives Way to Red">
         </div>
