--- a/vhiqosad.html
+++ b/vhiqosad.html
@@ -32,7 +32,7 @@
                 ▬▬▬▬▬▬▬▬▬ꘑ✧👁✧ꘑ▬▬▬▬▬▬▬▬▬
             </p>
             <h4>𒋦</h4>
-            <div class="deck">𓀓 &nbsp;𓀌 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;𓀊 𓀏</div>
+            <div class="deck">𓀓 &nbsp;𓀌 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;𓀊 𓀏</div>
             <p>
                 ▬▬▬▬▬▬▬▬▬❂❃௹❃❂▬▬▬▬▬▬▬▬▬
             </p>
