--- a/about.html
+++ b/about.html
@@ -15,6 +15,9 @@
         </div>
     </header>
     <main>
+      <div class="journal-content">
+        <p><a class="journal-entry" href="mailto:amazeking@gmail.com">Email</a></p>
+      </div>
     </main>
 </body>
 </html>
