--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
         <a href="index.html" class="back-button">&lt;</a>
         <div class="header-group">
           <img src="img/money.gif" alt="" class="desktop-icon di2">
-          <h1>Probably just link to external shop</h1>
+          <h1>Shop Coming Soon</h1>
         </div>
     </header>
     <main>
