--- a/journal.html
+++ b/journal.html
@@ -26,6 +26,12 @@
     <main>
         <div class="journal-content">
             <p>
+            <p>
+                <a href="journals/journyl3.html" class="journal-entry">I personally wrote this one on the internet! -¥-</a>
+                <br />
+                <span class="caption">(March 13 2024)</span>
+            </p>
+            <p></p>
                 <a href="journals/journal_2/second_entry.html" class="journal-entry">The most recenet journal entry</a>
                 <br />
                 <span class="caption">(March 14 2024)</span>
