--- a/journals/journyl3.html
+++ b/journals/journyl3.html
@@ -27,6 +27,6 @@
         <div class="journal-content">
             <p>Can include images, videos, or whatever</p>
         </div>
-    </main>
+    </main> okay, i'm typing in this box to test it!
 </body>
 </html>
