--- a/journals/journyl3.html
+++ b/journals/journyl3.html
@@ -26,6 +26,7 @@
     <main>
         <div class="journal-content">
             <p>Can include images, videos, or whatever</p>
+            journals/PRINT Piranha Records Maze black light version.jpeg
         </div>
     </main> okay, i'm typing in this box to test it!
 </body>
