--- a/journals/journyl3.html
+++ b/journals/journyl3.html
@@ -26,7 +26,7 @@
     <main>
         <div class="journal-content">
             <p>Can include images, videos, or whatever</p>
-            <img src="PRINT Piranha Records Maze black light version.jpeg" alt=""
+            <img src="PRINT Piranha Records Maze black light version.jpeg" alt="">
         </div>
     </main> okay, i'm typing in this box to test it!
 </body>
