--- a/journals/journyl3.html
+++ b/journals/journyl3.html
@@ -25,9 +25,9 @@
     </header>
     <main>
         <div class="journal-content">
-            <p>Can include images, videos, or whatever</p>
+            <p>okay, i'm typing in this box to test it!</p>
             <img src="PRINT Piranha Records Maze black light version.jpeg" alt="">
         </div>
-    </main> okay, i'm typing in this box to test it!
+    </main>hahaha there's still text here too, cuz i can!!!!!!
 </body>
 </html>
