--- a/journals/journyl3.html
+++ b/journals/journyl3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aMazeKing - First Entry</title>
+    <title>aMazeKing - First Entry Written by Dar¥l!</title>
     <link rel="stylesheet" href="../../style.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GMEPGCL87X"></script>
@@ -20,7 +20,7 @@
         <a href="../../journal.html" class="back-button">&lt;</a>
         <div class="header-group">
             <img src="../../img/pencil.gif" alt="" class="desktop-icon di0">
-            <h1>The first journal entry</h1>
+            <h1>The first journ¥l entry</h1>
         </div>
     </header>
     <main>
