--- a/journal.html
+++ b/journal.html
@@ -29,7 +29,7 @@
             <p>
                 <a href="journals/journyl3.html" class="journal-entry">I personally wrote this one on the internet! -¥-</a>
                 <br />
-                <span class="caption">(March 13 2024)</span>
+                <span class="caption">(March 27 2127cst 2024)</span>
             </p>
             <p></p>
                 <a href="journals/journal_2/second_entry.html" class="journal-entry">The most recenet journal entry</a>
