--- a/journals/journyl_4.html
+++ b/journals/journyl_4.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>aMazeKing - First Entry Written by Dar¥l!</title>
+    <link rel="stylesheet" href="../../style.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GMEPGCL87X"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
+        gtag('config', 'G-GMEPGCL87X');
+    </script>
+</head>
+<body>
+    <header>
+        <a href="../../journal.html" class="back-button">&lt;</a>
+        <div class="header-group">
+            <img src="../../img/pencil.gif" alt="" class="desktop-icon di0">
+            <h1>The first journ¥l entry</h1>
+        </div>
+    </header>
+    <main>
+        <div class="journal-content">
+            <p>this is jour¥l numero quatro, yo!!</p>
+            <img src="" alt="">
+        </div>
+    </main>hahaha there's still text here too, cuz i can!!!!!!
+</body>
+</html>
