--- a/journals/journyl_4.html
+++ b/journals/journyl_4.html
@@ -24,10 +24,10 @@
         </div>
     </header>
     <main>
-        <div class="journal-content">
+        <div class="journyl_4.html">
             <p>this is jour¥l numero quatro, yo!!</p>
             <img src="" alt="">
         </div>
-    </main>hahaha there's still text here too, cuz i can!!!!!!
+    </main>i'm learnin' learnin'
 </body>
 </html>
