--- a/journals/journyl_4.html
+++ b/journals/journyl_4.html
@@ -25,7 +25,11 @@
     </header>
     <main>
         <div class="journyl_4.html">
-            <p>this is jour¥l numero quatro, yo!!</p>
+            <p>this is jour¥l numero quatro, yo!!
+              </div>
+    </main>i'm learnin' learnin'
+</body>
+</p>
             <img src="" alt="">
         </div>
     </main>i'm learnin' learnin'
