--- a/journal.html
+++ b/journal.html
@@ -26,12 +26,16 @@
     <main>
         <div class="journal-content">
             <p>
+                <a href="journals/journyl_4.html" class="journal-entry">Fourth entry -¥-</a>
+                <br />
+                <span class="caption">(March 27 21:27cst 2024)</span>
+            </p>
             <p>
                 <a href="journals/journyl3.html" class="journal-entry">I personally wrote this one on the internet! -¥-</a>
                 <br />
-                <span class="caption">(March 27 2127cst 2024)</span>
+                <span class="caption">(March 27 21:27cst 2024)</span>
             </p>
-            <p></p>
+            <p>
                 <a href="journals/journal_2/second_entry.html" class="journal-entry">The most recenet journal entry</a>
                 <br />
                 <span class="caption">(March 14 2024)</span>
