--- a/journals/journyl_4.html
+++ b/journals/journyl_4.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <div class="journyl_4.html">
-            <p>this is jour¥l numero quatro, yo!!
+            <p>this is jour¥l numero quatro, yo!!</p>
         </div>
     </main>i'm learnin' learnin'
 </body>
