--- a/journals/journyl_4.html
+++ b/journals/journyl_4.html
@@ -24,7 +24,7 @@
         </div>
     </header>
     <main>
-        <div class="journyl_4.html">
+        <div class="journal-content">
             <p>this is jour¥l numero quatro, yo!!</p>
         </div>
     </main>i'm learnin' learnin'
