backgrounds and transitions

--- a/gallery.html
+++ b/gallery.html
@@ -19,25 +19,25 @@
     <header>
         <a href="index.html" class="back-button">&lt;</a>
         <div class="header-group">
-          <img src="img/look.gif" alt="" class="desktop-icon di1">
+          <img src="img/icons/look.gif" alt="" class="desktop-icon di1">
           <h1>Gallery</h1>
         </div>
     </header>
     <main>
       <div class="gallery">
         <h3>Full size images will be available as prints in the shop</h3>
-        <img src="img/Black Gives Way to Red.jpeg" alt="Black Gives Way to Red">
-        <img src="img/E3.jpeg" alt="E3">
-        <img src="img/Electric Borders.jpeg" alt="Electric Borders">
-        <img src="img/Excalimaze.jpeg" alt="Excalimaze">
-        <img src="img/Eyenima.jpeg" alt="Eyenima">
-        <img src="img/Floydian Slip.jpeg" alt="Floydian Slip">
-        <img src="img/Puffurize.jpeg" alt="Pufferize">
-        <img src="img/Rebel Tri-Start.jpeg" alt="Rebel Tri-Start">
-        <img src="img/Rouend.jpeg" alt="Rouend">
-        <img src="img/Start of Texas.jpeg" alt="Start of Texas">
-        <img src="img/Startship Enderprize.jpeg" alt="Startship Enderprize">
-        <img src="img/Welcome Home Planetarium.jpeg" alt="Welcome Home Planetarium">
+        <img src="img/mazes/Black Gives Way to Red.jpeg" alt="Black Gives Way to Red">
+        <img src="img/mazes/E3.jpeg" alt="E3">
+        <img src="img/mazes/Electric Borders.jpeg" alt="Electric Borders">
+        <img src="img/mazes/Excalimaze.jpeg" alt="Excalimaze">
+        <img src="img/mazes/Eyenima.jpeg" alt="Eyenima">
+        <img src="img/mazes/Floydian Slip.jpeg" alt="Floydian Slip">
+        <img src="img/mazes/Puffurize.jpeg" alt="Pufferize">
+        <img src="img/mazes/Rebel Tri-Start.jpeg" alt="Rebel Tri-Start">
+        <img src="img/mazes/Rouend.jpeg" alt="Rouend">
+        <img src="img/mazes/Start of Texas.jpeg" alt="Start of Texas">
+        <img src="img/mazes/Startship Enderprize.jpeg" alt="Startship Enderprize">
+        <img src="img/mazes/Welcome Home Planetarium.jpeg" alt="Welcome Home Planetarium">
     </div>
     </main>
     <script>
