--- a/index.html
+++ b/index.html
@@ -17,29 +17,36 @@
 </head>
 <body>
     <main>
+        <canvas id="canvas"></canvas>
         <div id="desktop-icons">
             <a href="journal.html" id="journal-icon-link" class="desktop-icon-link d0">
-                <img src="img/pencil.gif" alt="" class="desktop-icon di0">
+                <img src="img/icons/pencil.gif" alt="" class="desktop-icon di0">
                 <span class="icon-text">Journal</span>
             </a>
             <a href="gallery.html" id="gallery-icon-link" class="desktop-icon-link d1">
-                <img src="img/look.gif" alt="" class="desktop-icon di1">
+                <img src="img/icons/look.gif" alt="" class="desktop-icon di1">
                 <span class="icon-text">Gallery</span>
             </a>
             <a href="shop.html" id="shop-icon-link" class="desktop-icon-link d2">
-                <img src="img/money.gif" alt="" class="desktop-icon di2">
+                <img src="img/icons/money.gif" alt="" class="desktop-icon di2">
                 <span class="icon-text">Shop</span>
             </a>
             <a href="about.html" id="about-icon-link" class="desktop-icon-link d3">
-                <img src="img/mailbox.gif" alt="" class="desktop-icon di3">
+                <img src="img/icons/mailbox.gif" alt="" class="desktop-icon di3">
                 <span class="icon-text">About</span>
             </a>
             <a href="vhiqosad.html" id="vhiqosad-icon-link" class="desktop-icon-link d4">
-                <img src="img/crystalball.gif" alt="" class="desktop-icon di4">
+                <img src="img/icons/crystalball.gif" alt="" class="desktop-icon di4">
                 <span class="icon-text">???</span>
             </a>
         </div>
     </main>
-    <script src="script.js"></script>
+    <style>
+        body {
+            overflow: hidden;
+        }
+    </style>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/background.js"></script>
 </body>
 </html>
