--- a/journal.html
+++ b/journal.html
@@ -19,7 +19,7 @@
     <header>
         <a href="index.html" class="back-button">&lt;</a>
         <div class="header-group">
-            <img src="img/pencil.gif" alt="" class="desktop-icon di0">
+            <img src="img/icons/pencil.gif" alt="" class="desktop-icon di0">
             <h1>Journal Entries </h1>
         </div>
     </header>
@@ -28,12 +28,12 @@
             <p>
                 <a href="journals/journyl_4.html" class="journal-entry">Fourth entry -¥-</a>
                 <br />
-                <span class="caption">(March 27 21:27cst 2024)</span>
+                <span class="caption">(March 27 2024 21:57 CST)</span>
             </p>
             <p>
                 <a href="journals/journyl3.html" class="journal-entry">I personally wrote this one on the internet! -¥-</a>
                 <br />
-                <span class="caption">(March 27 21:27cst 2024)</span>
+                <span class="caption">(March 27 2024 21:27 CST)</span>
             </p>
             <p>
                 <a href="journals/journal_2/second_entry.html" class="journal-entry">The most recenet journal entry</a>
