--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <header>
         <a href="index.html" class="back-button">&lt;</a>
         <div class="header-group">
-          <img src="img/mailbox.gif" alt="" class="desktop-icon di3">
+          <img src="img/icons/mailbox.gif" alt="" class="desktop-icon di3">
           <h1>Info About Us</h1>
         </div>
     </header>
