--- a/journals/journal_2/second_entry.html
+++ b/journals/journal_2/second_entry.html
@@ -19,8 +19,8 @@
     <header>
         <a href="../../journal.html" class="back-button">&lt;</a>
         <div class="header-group">
-            <img src="../../img/pencil.gif" alt="" class="desktop-icon di0">
-            <h1>The most recent journal entry</h1>
+            <img src="../../img/icons/pencil.gif" alt="" class="desktop-icon di0">
+            <h1>The second journal entry</h1>
         </div>
     </header>
     <main>
