--- a/journals/journyl3.html
+++ b/journals/journyl3.html
@@ -19,14 +19,14 @@
     <header>
         <a href="../../journal.html" class="back-button">&lt;</a>
         <div class="header-group">
-            <img src="../../img/pencil.gif" alt="" class="desktop-icon di0">
+            <img src="../../img/icons/pencil.gif" alt="" class="desktop-icon di0">
             <h1>The first journ¥l entry</h1>
         </div>
     </header>
     <main>
         <div class="journal-content">
             <p>okay, i'm typing in this box to test it!</p>
-            <img src="PRINT Piranha Records Maze black light version.jpeg" alt="">
+            <img src="../img/mazes/Piranna.jpeg" alt="">
         </div>
     </main>hahaha there's still text here too, cuz i can!!!!!!
 </body>
