--- a/journals/journyl_4.html
+++ b/journals/journyl_4.html
@@ -19,7 +19,7 @@
     <header>
         <a href="../../journal.html" class="back-button">&lt;</a>
         <div class="header-group">
-            <img src="../../img/pencil.gif" alt="" class="desktop-icon di0">
+            <img src="../img/icons/pencil.gif" alt="" class="desktop-icon di0">
             <h1>The first journ¥l entry</h1>
         </div>
     </header>
