I approve this save!

--- a/journal.html
+++ b/journal.html
@@ -25,26 +25,78 @@
     </header>
     <main>
         <div class="journal-content">
-            <p>
-                <a href="journals/journyl_4.html" class="journal-entry">Fourth entry -¥-</a>
-                <br />
-                <span class="caption">(March 27 2024 21:57 CST)</span>
-            </p>
-            <p>
-                <a href="journals/journyl3.html" class="journal-entry">I personally wrote this one on the internet! -¥-</a>
-                <br />
+            <div class="journal-entry">
+                <div class="caption">(April 5 2024 21:10 CST)</div>
+                <h2>Sixth thing 3rd for me! entry -¥-</h2>
+                <p>
+                   Hey, I'm getting help so that I can write whatever the hell I want, 
+                   and it'll let me do that so I can say hello like, THIS!
+                </p>
+                </p>
+                   I intend to get to many things, but on April 27th (my favorite number) 
+                   I am at an art show here in beautiful Austin, Texas!
+                   It's the 16th annual Sunset Valley Art Festival!
+                   I will find the address. Hang on, 
+                </p>
+                <a href="https://www.sunsetvalley.org/home/">
+                    <img src="https://www.sunsetvalley.org/home/showpublishedimage/1514/638462899020970000" alt="">
+                </a>
+                <p>
+                    I haven't gone out to show people these in person in 13 years, 
+                    and think this will be very fun! You'll know somebody who will 
+                    want one of these in your life!
+                    You,ll see! the blavk light function is so cool. it's too bad I have
+                     to do that manually. Anyhow, Fun!
+                </p>
+                <img src="img/mazes/blacklight examples/Dog Maze of Summer blacklight example.jpeg">
+                <img src="img/mazes/blacklight examples/Picture of most of em example blacklight.jpeg">
+                <img src="img/mazes/blacklight examples/Eyenima blacklight example.jpeg">
+                <img src="img/mazes/blacklight examples/excalamaze blacklight example.jpeg">
+            </div>
+            <div class="journal-entry">
+                <div class="caption">(April 5 2024 20:06 CST)</div>
+                <h2>Fifth entry -¥-</h2>
+                <p>
+                    But I must explain to you how all this mistaken idea of denouncing
+                    pleasure and praising pain was born and I will give you a complete 
+                    account of the system, and expound the actual teachings of the great 
+                    explorer of the truth, the master-builder of human happiness.
+                </p>
+                <img src="img/mazes/Piranna.jpeg" alt="">
+                <p>
+                    No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, 
+                    but because those who do not know how to pursue pleasure rationally 
+                    encounter consequences that are extremely painful. Nor again is there 
+                    anyone who loves or pursues or desires to obtain pain of itself, because 
+                    it is pain, but because occasionally circumstances occur in which toil and 
+                    pain can procure him some great pleasure. To take a trivial example, which 
+                    of us ever undertakes laborious physical exercise, except to obtain some 
+                    advantage from it? But who has any right to find fault with a man who 
+                    chooses to enjoy a pleasure that has no annoying consequences, or one who 
+                    avoids a pain that produces no resultant pleasure?
+                </p>
+            </div>
+            <div class="journal-entry">
+                <span cla   ss="caption">(March 27 2024 21:57 CST)</span>
+                <h2>Fourth entry -¥-</h2>
+                <p>this is jour¥l numero quatro, yo!!</p>
+            </div>
+            <div class="journal-entry">
                 <span class="caption">(March 27 2024 21:27 CST)</span>
-            </p>
-            <p>
-                <a href="journals/journal_2/second_entry.html" class="journal-entry">The most recenet journal entry</a>
-                <br />
+                <h2>The first journ¥l entry</h2>
+                <p>okay, i'm typing in this box to test it!</p>
+                <img src="img/mazes/Piranna.jpeg" alt="">
+            </div>
+            <div class="journal-entry">
+                <span class="caption">(March 27 2024 21:27 CST)</span>
+                <h2>I personally wrote this one on the internet! -¥-</h2>
+                <p>Some stuff happened recently pretty sure</p>
+            </div>
+            <div class="journal-entry">
                 <span class="caption">(March 14 2024)</span>
-            </p>
-            <p>
-                <a href="journals/journal_1/first_entry.html" class="journal-entry">The first journal entry</a>
-                <br />
-                <span class="caption">(March 13 2024)</span>
-            </p>
+                <h2>The first journal entry</h2>
+                <p>Some stuff happened recently pretty sure</p>
+            </div>
         </div>
     </main>
 </body>
