--- a/journal.html
+++ b/journal.html
@@ -52,50 +52,58 @@
                 <img src="img/mazes/blacklight examples/Picture of most of em example blacklight.jpeg">
                 <img src="img/mazes/blacklight examples/Eyenima blacklight example.jpeg">
                 <img src="img/mazes/blacklight examples/excalamaze blacklight example.jpeg">
+                <hr />
             </div>
             <div class="journal-entry">
                 <div class="caption">(April 5 2024 20:06 CST)</div>
                 <h2>Fifth entry -¥-</h2>
                 <p>
-                    But I must explain to you how all this mistaken idea of denouncing
-                    pleasure and praising pain was born and I will give you a complete 
-                    account of the system, and expound the actual teachings of the great 
-                    explorer of the truth, the master-builder of human happiness.
+                    Amidst the dusty desert plains, where heatwaves dance like specters in 
+                    the sun, we find ourselves amidst the cacophony of the Mint 400 motorcycle 
+                    race. Motorcycle engines roar like lions in the jungle, their riders clad 
+                    in a mishmash of leather and denim, a motley crew of misfits and rebels. 
+                    Amidst the chaos, the air is thick with the smell of gasoline and sweat, 
+                    a heady cocktail that invades the senses. Zipping past in a blur of motion, 
+                    the motorcycles become streaks of color against the barren landscape. 
+                    Every twist and turn of the track is a gamble with fate, a roll of the 
+                    dice in the game of life. 
                 </p>
                 <img src="img/mazes/Piranna.jpeg" alt="">
                 <p>
-                    No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, 
-                    but because those who do not know how to pursue pleasure rationally 
-                    encounter consequences that are extremely painful. Nor again is there 
-                    anyone who loves or pursues or desires to obtain pain of itself, because 
-                    it is pain, but because occasionally circumstances occur in which toil and 
-                    pain can procure him some great pleasure. To take a trivial example, which 
-                    of us ever undertakes laborious physical exercise, except to obtain some 
-                    advantage from it? But who has any right to find fault with a man who 
-                    chooses to enjoy a pleasure that has no annoying consequences, or one who 
-                    avoids a pain that produces no resultant pleasure?
+                    Keeping pace with the action, we're swept up 
+                    in the frenzy, our hearts pounding with excitement. In the midst of it 
+                    all, we find ourselves questioning the very fabric of reality, lost in a 
+                    haze of dust and adrenaline. Navigating through the madness, we're reminded 
+                    of the raw, untamed spirit of humanity, a force to be reckoned with. Gazing 
+                    out into the vast expanse of desert, we're struck by the sheer absurdity of 
+                    it all, a surreal spectacle that defies explanation.
                 </p>
+                <hr />
             </div>
             <div class="journal-entry">
-                <span cla   ss="caption">(March 27 2024 21:57 CST)</span>
+                <span class="caption">(March 27 2024 21:57 CST)</span>
                 <h2>Fourth entry -¥-</h2>
                 <p>this is jour¥l numero quatro, yo!!</p>
+                <hr />
             </div>
             <div class="journal-entry">
                 <span class="caption">(March 27 2024 21:27 CST)</span>
                 <h2>The first journ¥l entry</h2>
                 <p>okay, i'm typing in this box to test it!</p>
                 <img src="img/mazes/Piranna.jpeg" alt="">
+                <hr />
             </div>
             <div class="journal-entry">
                 <span class="caption">(March 27 2024 21:27 CST)</span>
                 <h2>I personally wrote this one on the internet! -¥-</h2>
                 <p>Some stuff happened recently pretty sure</p>
+                <hr />
             </div>
             <div class="journal-entry">
                 <span class="caption">(March 14 2024)</span>
                 <h2>The first journal entry</h2>
                 <p>Some stuff happened recently pretty sure</p>
+                <hr />
             </div>
         </div>
     </main>
