--- a/journal.html
+++ b/journal.html
@@ -68,7 +68,7 @@
                     Every twist and turn of the track is a gamble with fate, a roll of the 
                     dice in the game of life. 
                 </p>
-                <img src="img/mazes/Piranna.jpeg" alt="">
+                <img src="img/mazes/preview/Piranha.jpg" alt="Piranha Maze">
                 <p>
                     Keeping pace with the action, we're swept up 
                     in the frenzy, our hearts pounding with excitement. In the midst of it 
