--- a/journal.html
+++ b/journal.html
@@ -90,7 +90,7 @@
                 <span class="caption">(March 27 2024 21:27 CST)</span>
                 <h2>The first journ¥l entry</h2>
                 <p>okay, i'm typing in this box to test it!</p>
-                <img src="img/mazes/Piranna.jpeg" alt="">
+                <img src="img/mazes/preview/Piranha.jpg" alt="">
                 <hr />
             </div>
             <div class="journal-entry">
