--- a/journal.html
+++ b/journal.html
@@ -96,7 +96,7 @@
             <div class="journal-entry">
                 <span class="caption">(March 27 2024 21:27 CST)</span>
                 <h2>I personally wrote this one on the internet! -¥-</h2>
-                <p>Some stuff happened recently pretty sure</p>
+                <p>hahaha there's still text here too, cuz i can!!!!!!</p>
                 <hr />
             </div>
             <div class="journal-entry">
