selected image titles

--- a/gallery.html
+++ b/gallery.html
@@ -29,6 +29,7 @@
             <div class="image-popover hidden">
                 <span class="close">&times;</span>
                 <img src="" alt="Large Image" class="large-image">
+                <div class="large-image-title"></div>
             </div>
         </div>  
         <div class="gallery">      
