--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     </header>
     <main>
       <div class="journal-content">
-        <p><a class="journal-entry" href="mailto:amazeking@gmail.com">Email</a></p>
+        <p class="journal-entry"><a href="mailto:amazeking@gmail.com">Email</a></p>
       </div>
     </main>
 </body>
