--- a/journal.html
+++ b/journal.html
@@ -45,8 +45,8 @@
                     I haven't gone out to show people these in person in 13 years, 
                     and think this will be very fun! You'll know somebody who will 
                     want one of these in your life!
-                    You,ll see! the blavk light function is so cool. it's too bad I have
-                     to do that manually. Anyhow, Fun!
+                    You,ll see! the black light function is so cool. it's too bad I have 
+                    to do that manually. Anyhow, Fun!
                 </p>
                 <img src="img/mazes/preview/Dog Maze of Summer blacklight example.jpg">
                 <img src="img/mazes/preview/Collection BL.jpg">
