--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img src="img/icons/look.gif" alt="" class="desktop-icon di1">
                 <span class="icon-text">Gallery</span>
             </a>
-            <a href="shop.html" id="shop-icon-link" class="desktop-icon-link d2">
+            <a href="https://amazeking-shop.fourthwall.com/" id="shop-icon-link" class="desktop-icon-link d2">
                 <img src="img/icons/money.gif" alt="" class="desktop-icon di2">
                 <span class="icon-text">Shop</span>
             </a>
