--- a/galleryDetail.html
+++ b/galleryDetail.html
@@ -27,16 +27,18 @@
   <div class="container">
     <div class="gallery">
       <div class="viewer">
-          <!-- <img id="main-image" src="" alt="Main viewer image"> -->
           <div class="slider-main">
               <!-- Main viewer images will be inserted here by JavaScript -->
           </div>
       </div>
-      <div class="preview-list" id="preview-list">
-        <!-- Preview images will be inserted here by JavaScript -->
-      </div>
-      <div class="preview-list-compact" id="preview-list-compact">
-        <!-- Preview images will be inserted here by JavaScript -->
+      <div class="preview-list-container">
+        <div id="control-up" class="control control-up">&#9651;</div>
+        <div class="preview-list" id="preview-list">
+          <!-- Preview images will be inserted here by JavaScript -->
+        </div>
+        <div class="control control-down">&#9661;</div>
+        <div class="control control-left">&#9665;</div>
+        <div class="control control-right">&#9655;</div>
       </div>
     </div>
     <div class="details">
