--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="back-button">&lt;</a>
+        <a href="index.html" class="back-button"><div class="bl"><div class="bl2">𒉶</div></div></a>
         <div class="header-group">
           <img src="img/icons/mailbox.gif" alt="" class="desktop-icon di3">
           <h1>Info About Us</h1>
