--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="back-button">&lt;</a>
+        <a href="index.html" class="back-button"><div class="bl"><div class="bl2">𒉶</div></div></a>
         <div class="header-group">
           <img src="img/icons/look.gif" alt="" class="desktop-icon di1">
           <h1>Gallery</h1>
