--- a/galleryDetail.html
+++ b/galleryDetail.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <header>
-    <a href="gallery.html" class="back-button">&lt;</a>
+    <a href="gallery.html" class="back-button"><div class="bl"><div class="bl2">𒉶</div></div></a>
     <div class="header-group">
       <h1 id="title">Gallery</h1>
     </div>
@@ -32,13 +32,13 @@
           </div>
       </div>
       <div class="preview-list-container">
-        <div id="control-up" class="control control-up">&#9651;</div>
+        <div id="control-up" class="control control-up"><div class="u1" ><div class="u2" >𒉰</div></div></div>
         <div class="preview-list" id="preview-list">
           <!-- Preview images will be inserted here by JavaScript -->
         </div>
-        <div class="control control-down">&#9661;</div>
-        <div class="control control-left">&#9665;</div>
-        <div class="control control-right">&#9655;</div>
+        <div class="control control-down"><div class="d1" ><div class="d2" >𒉶</div></div></div>
+        <div class="control control-left"><div class="l1" ><div class="l2" >𒉲</div></div></div>
+        <div class="control control-right"><div class="r1" ><div class="r2" >𒉯</div></div></div>
       </div>
     </div>
     <div class="details">
