--- a/journal.html
+++ b/journal.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="back-button">&lt;</a>
+        <a href="index.html" class="back-button"><div class="bl"><div class="bl2">𒉶</div></div></a>
         <div class="header-group">
             <img src="img/icons/pencil.gif" alt="" class="desktop-icon di0">
             <h1>Journal Entries </h1>
