--- a/vhiqosad.html
+++ b/vhiqosad.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="back-button">&lt;</a>
+        <a href="index.html" class="back-button"><div class="bl"><div class="bl2">𒉶</div></div></a>
         <div class="header-group">
             <img src="img/crystalball.gif" alt="" class="desktop-icon di4">
             <h1>𒁃</h1>
