--- a/galleryDetail.html
+++ b/galleryDetail.html
@@ -47,6 +47,7 @@
     </div>
   </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.js"></script>
+    <script src="galleryData.js"></script>
     <script src="galleryDetail.js"></script>
 </body>
 </html>
