--- a/gallery.html
+++ b/gallery.html
@@ -29,16 +29,17 @@
             <div class="image-popover hidden">
                 <span class="close">&times;</span>
                 <img src="" alt="Large Image" class="large-image">
-                <div class="large-image-title"></div>
+                <div class="large-image-title"><a class="large-image-label"></a></div>
             </div>
         </div>  
-        <div class="gallery">      
+        <div class="gallery">  
             <div class="tabs">
                 <div class="tab active" onclick="openTab('tab1')" id="ctab1">Originals</div>
                 <div class="tab" onclick="openTab('tab2')" id="ctab2">Commissions</div>
                 <div class="tab" onclick="openTab('tab3')" id="ctab3">Alphabet</div>
             </div>
             <div class="tab-content active" id="tab1">
+                <div class="gallery-message">Click on a title to view details and variants</div>  
                 <div class="images"></div>
             </div>
             <div class="tab-content" id="tab2">
