--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,7 @@
                 <div class="tab" onclick="openTab('tab3')" id="ctab3">Alphabet</div>
             </div>
             <div class="tab-content active" id="tab1">
-                <div class="gallery-message">Click on a title to view details and variants</div>  
+                <h3>Click on a title to view details and variants</h3>  
                 <div class="images"></div>
             </div>
             <div class="tab-content" id="tab2">
