--- a/about.html
+++ b/about.html
@@ -25,7 +25,22 @@
     </header>
     <main>
       <div class="journal-content">
-        <p class="journal-entry"><a href="mailto:amazeking@gmail.com">Email</a></p>
+        <p class="journal-entry"><a href="mailto:amazeking@gmail.com">Contact Us</a></p>
+        <h3>Us</h3>
+        <ul class="journal-entry">
+          <li>Daryl - Art</li>
+          <li>Steve - Website</li>
+        </ul>
+        <h3>Shout-outs to</h3>
+        <ul class="journal-entry">
+          <li>Curly jew</li>
+          <li>Roy</li>
+          <li>Pufferte</li>
+          <li>Big guy</li>
+          <li>SC</li>
+          <li>Smashley</li>
+          <li>Momzilla</li>
+        </ul>
       </div>
     </main>
 </body>
