overlay bahind open gallery items

--- a/gallery.html
+++ b/gallery.html
@@ -17,6 +17,7 @@
     </script>
 </head>
 <body>
+    <div class="gallery-overlay hidden"></div>
     <header>
         <a href="index.html" class="back-button"><div class="bl"><div class="bl2">𒉶</div></div></a>
         <div class="header-group">
